--- a/index.html
+++ b/index.html
@@ -5,108 +5,143 @@
 <title>MEDO EDIT | Video Editor</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Cairo:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
+:root{
+    --bg:#0b0f1a;
+    --card:#12172a;
+    --blue:#4da3ff;
+    --darkblue:#1e3a8a;
+    --text:#cdd9ff;
+}
+
 body{
     margin:0;
-    font-family:Arial,sans-serif;
-    background:#111;
-    color:#fff;
+    font-family:'Cairo',sans-serif;
+    background:var(--bg);
+    color:var(--text);
     direction:rtl;
 }
 
-/* Header */
+/* ===== Header ===== */
 header{
     text-align:center;
-    padding:60px 20px;
-    background:linear-gradient(135deg,#0d6efd,#5aa0ff);
+    padding:80px 20px;
+    background:radial-gradient(circle at top,#162044,#0b0f1a);
 }
-header h1{margin:0;font-size:36px}
-header p{font-size:18px}
 
-/* Sections */
+header h1{
+    margin:0;
+    font-family:'Montserrat',sans-serif; /* خط مختلف */
+    font-size:48px;
+    font-weight:800;
+    letter-spacing:2px;
+    color:var(--blue);
+}
+
+header p{
+    font-size:18px;
+    color:#9fbaff;
+    margin-top:10px;
+}
+
+/* ===== Sections ===== */
 section{
-    padding:40px 20px;
+    padding:60px 20px;
     max-width:1200px;
     margin:auto;
 }
+
 h2{
     text-align:center;
-    color:#5aa0ff;
-    margin-bottom:25px;
+    color:var(--blue);
+    margin-bottom:30px;
+    font-size:28px;
 }
 
-/* About */
+/* ===== About ===== */
 .about{
     text-align:center;
-    font-size:18px;
-    line-height:1.9;
-    max-width:800px;
+    max-width:850px;
     margin:auto;
+    font-size:18px;
+    line-height:2;
+    color:#d6e2ff;
 }
 
-/* Reels Gallery */
+/* ===== Reels Gallery ===== */
 .reels{
     display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:20px;
+    grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
+    gap:25px;
 }
 
 .reel-card{
-    background:#1c1c1c;
-    border-radius:16px;
+    background:linear-gradient(180deg,#141a33,#0f1429);
+    border-radius:18px;
     overflow:hidden;
-    box-shadow:0 8px 20px rgba(0,0,0,0.5);
-    transition:transform 0.3s;
+    box-shadow:0 15px 30px rgba(0,0,0,0.6);
+    transition:0.4s;
 }
+
 .reel-card:hover{
-    transform:translateY(-6px);
+    transform:translateY(-8px) scale(1.02);
 }
 
 .reel-card iframe,
 .reel-card video{
     width:100%;
-    height:390px;
+    height:400px;
     object-fit:cover;
     border:none;
 }
 
 .reel-title{
-    padding:10px;
     text-align:center;
-    font-weight:bold;
+    padding:12px;
+    font-weight:600;
+    color:#bcd7ff;
+    background:rgba(0,0,0,0.3);
 }
 
-/* Contact */
+/* ===== Contact ===== */
 .contact{
     text-align:center;
 }
+
 .contact a{
     display:inline-block;
-    padding:14px 30px;
-    background:#0d6efd;
-    color:#fff;
+    padding:16px 40px;
+    border-radius:40px;
+    background:linear-gradient(135deg,var(--blue),var(--darkblue));
+    color:white;
     text-decoration:none;
-    border-radius:30px;
     font-size:18px;
-}
-.contact a:hover{
-    background:#5aa0ff;
+    font-weight:600;
+    transition:0.3s;
 }
 
-/* Footer */
+.contact a:hover{
+    transform:scale(1.05);
+    box-shadow:0 0 25px rgba(77,163,255,0.6);
+}
+
+/* ===== Footer ===== */
 footer{
     text-align:center;
-    padding:20px;
-    background:#000;
+    padding:25px;
+    background:#060912;
+    color:#7f9cff;
     font-size:14px;
 }
 
-/* Mobile */
+/* ===== Mobile ===== */
 @media(max-width:600px){
+    header h1{font-size:34px}
     .reel-card iframe,
-    .reel-card video{
-        height:450px;
-    }
+    .reel-card video{height:460px}
 }
 </style>
 </head>
@@ -115,16 +150,17 @@ footer{
 
 <header>
     <h1>MEDO EDIT</h1>
-    <p>Video Editor | Reels & Short Videos</p>
+    <p>Professional Video Editor | Reels & Short Videos</p>
 </header>
 
 <section>
     <h2>نبذة عني</h2>
     <p class="about">
-        أنا فيديو إيديتور متخصص في مونتاج الريلز والفيديوهات القصيرة باحترافية عالية
-        تناسب منصات السوشيال ميديا. أركز على الإيقاع، الجذب البصري،
-        وتحسين جودة المحتوى لزيادة التفاعل والمشاهدات،
-        مع فهم قوي لطبيعة المحتوى والتريندات.
+        أنا فيديو إيديتور متخصص في مونتاج الريلز والفيديوهات القصيرة
+        باحترافية تناسب منصات السوشيال ميديا.
+        أركز على الإيقاع البصري، قوة البداية،
+        وتحويل المحتوى العادي إلى فيديو يجذب الانتباه
+        ويزيد التفاعل والمشاهدات.
     </p>
 </section>
 
@@ -155,7 +191,7 @@ footer{
 <section>
     <h2>تواصل معي</h2>
     <div class="contact">
-        <a href="https://wa.me/20109321538" target="_blank">💬 واتساب مباشر</a>
+        <a href="https://wa.me/201093215338" target="_blank">💬 واتساب </a>
     </div>
 </section>
 
