--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ header{
 header h1{
     font-family:'Montserrat', sans-serif;
     font-size:52px;
-    color:#4da3ff; /* أزرق العنوان */
+    color:#4da3ff;
     letter-spacing:3px;
 }
 
 header p{
     margin-top:15px;
-    color:#a9c8ff; /* النص تحت العنوان */
+    color:#a9c8ff;
     font-size:18px;
 }
 
@@ -125,6 +125,7 @@ h2{
     display:flex;
     justify-content:center;
     gap:18px;
+    margin-top:25px;
 }
 
 .icon-btn{
@@ -203,6 +204,10 @@ footer{
 
 <footer>
     © 2025 MEDO EDIT – All Rights Reserved
+</footer>
+
+</body>
+</html>All Rights Reserved
 </footer>
 
 </body>
