--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <title>MEDO EDIT | Video Editor</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Icons -->
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<!-- Fonts -->
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Cairo:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -19,8 +19,8 @@
 }
 
 body{
-    background:#0b0f3a; 
-    color:#d6e4ff;     
+    background:#0b0f3a;
+    color:#d6e4ff;
     font-family:'Cairo', sans-serif;
     direction:rtl;
 }
@@ -33,9 +33,8 @@ body{
 
 /* Header */
 header{
-    background:#0b0f3a;
-    text-align:center;
     padding:90px 20px;
+    text-align:center;
     animation:fadeUp 1s ease;
 }
 
@@ -44,14 +43,13 @@ header h1{
     font-size:52px;
     color:#4da3ff;
     letter-spacing:3px;
-    text-shadow:0 0 10px rgba(77,163,255,0.4), 0 0 25px rgba(77,163,255,0.2);
+    text-shadow:0 0 12px rgba(77,163,255,.5);
 }
 
 header p{
     margin-top:15px;
     color:#a9c8ff;
     font-size:18px;
-    text-shadow:0 0 5px rgba(77,163,255,0.2);
 }
 
 /* Sections */
@@ -65,9 +63,9 @@ section{
 h2{
     text-align:center;
     margin-bottom:40px;
-    color:#4da3ff;
     font-size:32px;
-    text-shadow:0 0 15px rgba(77,163,255,0.4);
+    color:#4da3ff;
+    text-shadow:0 0 10px rgba(77,163,255,.4);
 }
 
 /* About */
@@ -77,7 +75,6 @@ h2{
     line-height:1.9;
     max-width:900px;
     margin:auto;
-    text-shadow:0 0 3px rgba(77,163,255,0.2);
 }
 
 /* Portfolio */
@@ -88,16 +85,16 @@ h2{
 }
 
 .reel{
-    background:#1c1c1c; 
+    background:#1c1c1c;
     border-radius:18px;
     overflow:hidden;
-    transition:0.4s;
-    box-shadow:0 0 15px rgba(77,163,255,0.2);
+    transition:.4s;
+    box-shadow:0 0 18px rgba(77,163,255,.25);
 }
 
 .reel:hover{
     transform:scale(1.03);
-    box-shadow:0 0 35px rgba(77,163,255,0.4);
+    box-shadow:0 0 35px rgba(77,163,255,.5);
 }
 
 .reel iframe{
@@ -109,21 +106,21 @@ h2{
 /* Drive Button */
 .drive-btn{
     display:block;
-    width:fit-content;
     margin:40px auto 0;
-    padding:14px 28px;
+    padding:14px 30px;
     background:linear-gradient(135deg,#4da3ff,#1e3a8a);
     color:#fff;
     text-decoration:none;
     border-radius:30px;
     font-size:16px;
-    transition:0.3s;
-    box-shadow:0 0 20px rgba(77,163,255,0.3);
+    width:fit-content;
+    transition:.3s;
+    box-shadow:0 0 20px rgba(77,163,255,.4);
 }
 
 .drive-btn:hover{
-    transform:scale(1.07);
-    box-shadow:0 0 35px rgba(77,163,255,0.5);
+    transform:scale(1.08);
+    box-shadow:0 0 35px rgba(77,163,255,.6);
 }
 
 /* Contact */
@@ -142,24 +139,23 @@ h2{
     display:flex;
     align-items:center;
     justify-content:center;
-    color:#050914;
     font-size:22px;
-    transition:0.3s;
-    box-shadow:0 0 15px rgba(77,163,255,0.3);
+    color:#050914;
+    transition:.3s;
+    box-shadow:0 0 18px rgba(77,163,255,.4);
 }
 
 .icon-btn:hover{
-    transform:scale(1.1);
-    box-shadow:0 0 35px rgba(77,163,255,0.5);
+    transform:scale(1.12);
+    box-shadow:0 0 35px rgba(77,163,255,.6);
 }
 
 /* Footer */
 footer{
     text-align:center;
-    padding:25px;
-    color:#8fb7ff;
+    padding:30px 15px;
     font-size:14px;
-    text-shadow:0 0 3px rgba(77,163,255,0.2);
+    color:#8fb7ff;
 }
 </style>
 </head>
@@ -176,7 +172,7 @@ footer{
     <p class="about">
         أنا فيديو إيديتور متخصص في مونتاج الريلز وصناعة المحتوى القصير
         بأسلوب احترافي يساعد على زيادة التفاعل والمشاهدات،
-        مع اهتمام قوي بالإيقاع والترانزيشن وإبراز أقوى اللحظات.
+        مع اهتمام بالإيقاع والترانزيشن وإبراز أقوى اللحظات.
     </p>
 </section>
 
@@ -187,7 +183,6 @@ footer{
         <div class="reel">
             <iframe src="https://www.instagram.com/reel/DLhe7hmChTR/embed" allowfullscreen></iframe>
         </div>
-
         <div class="reel">
             <iframe src="https://www.instagram.com/reel/DScbptJDHj2/embed" allowfullscreen></iframe>
         </div>
@@ -205,6 +200,17 @@ footer{
             <i class="fa-brands fa-whatsapp"></i>
         </a>
         <a class="icon-btn" href="https://tiktok.com/@medo.edit.555" target="_blank">
+            <i class="fa-brands fa-tiktok"></i>
+        </a>
+    </div>
+</section>
+
+<footer>
+    MEDO EDIT – All Rights Reserved © 2025
+</footer>
+
+</body>
+</html>@medo.edit.555" target="_blank">
             <i class="fa-brands fa-tiktok"></i>
         </a>
     </div>
