--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
@@ -207,29 +207,6 @@ footer{
 
 <footer>
     MEDO EDIT – All Rights Reserved © 2025
-</footer>
-
-</body>
-</html>@medo.edit.555" target="_blank">
-            <i class="fa-brands fa-tiktok"></i>
-        </a>
-    </div>
-</section>
-
-<footer>
-    © 2025 MEDO EDIT – All Rights Reserved
-</footer>
-
-</body>
-</html>lank" class="btn-icon">
-            <i class="fa-brands fa-tiktok"></i>
-        </a>
-
-    </div>
-</section>
-
-<footer>
-    © 2025 MEDO EDIT – All Rights Reserved
 </footer>
 
 </body>
